--- a/index.html
+++ b/index.html
@@ -6,16 +6,303 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>Stardew Valley Wiki</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
 
-	<script defer src="scripts/script.js"></script>
-</body>
-	
+<header>
+
+<nav>
+	<button aria-hidden="false"> <img src="images/hamburger.png" alt=""></button>
+
+	<ul>
+		<li>  <a class="active"><img src="images/home.png" alt=""></a> </li>
+		<li>  <a href=""><img src="images/random.png" alt=""></a> </li>
+		<li>  <a href=""><img src="images/login.png" alt=""></a> </li>
+		<li>  <a href=""><img src="images/settings.png" alt=""></a> </li>
+		<li>  <a href=""></a></li>
+		<li>  <a href=""></a></li>
+	</ul>
+		
+</nav>
+
+<h1>Stardew Valley Wiki</h1>
+
+<img src="images/search.svg" alt="">
+</header>
+
+<main>
+<img src="images/mainlogo.png" alt="stardew valley's main logo">
+ <h2>Welcome to the official 
+	<a href="/Stardew Valley" title="Stardew valley">Stardew Valley</a>
+ Wiki</h2>
+ <p>We currently have 
+	<a href="/specials:statistics" title="Special:statistics">1,576 articles</a>
+	about the country-life RPG developed by 
+	<a href="/ConcernedApe" title="ConcernedApe">ConcernedApe</a>
+	. 
+</p>
+
+ <ul>
+	<l><a href="https://stardewvalley.net/">Official Site</a></l>
+	<l><a href="https://forums.stardewvalley.net/">Official Forums</a></l>
+	<l><a href="https://www.gog.com/game/stardew valley">GOG Store</a></l>
+	<l><a href="https://www.humblebundle.com/store/stardew-valley">Humble Store</a></l>
+	<l><a href="https://store.steampowered.com/app/413150">Steam Store</a></l>
+ </ul>
+
+ <div class="platformimages">
+ <img src="images/platform-steam.png" alt="The steam logo">
+ <img src="images/platform-ios.png" alt="The ios store logo"> 
+ <img src="images/platform-play.png" alt="The playstore logo">
+ <img src="/images/mobile_banner_2.png" alt="The stardew Valley 1.5 update banner">
+ <img src="images/platform-switch.png" alt="The Nintendo Switch logo">
+ <img src="images/platform-ps4.png" alt="The PS4 logo">
+ <img src="images/platform-xbox.png" alt="The Xbox logo">
+</div>
+
+<div class="updates">
+<ul>
+<l>Computer version <a href="Version History">1.5.6 (Updated January 18, 2022)</a>
+	<l>	<a href="https://store.playstation.com/en-us/product/UP2456-CUSA06840_00-STARDEW00000SIEA">Ps4 version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+		<l>   <a href="https://www.xbox.com/en-US/games/store/stardew-valley/c3d891z6tnqm">Xbox One version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+			<l>	<a href="http://www.nintendo.com/games/detail/stardew-valley-switch">Switch version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+				<l>	<a href="https://store.playstation.com/en-us/error">Ps Vita version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+					<l>	<a href="https://apps.apple.com/us/app/stardew-valley/id1406710800">IOS version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+						<l><a href="https://play.google.com/store/apps/details?id=com.chucklefish.stardewvalley&pli=1">Android version</a> <a href="Version History">1.5.6 (Updated January 18, 2022)</a></l>
+</ul>
+</div>
+
+<div class="talen">
+<ul>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Deutsch</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">English</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Español</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Français</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Italiano</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">日本語</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">한국어</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Magyar</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Português</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Русский</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">Türkçe</a></li>
+ <li> <a href="https://stardewvalleywiki.com/Stardew_Valley_Wiki">中文</a></li>
+</ul>
+</div>
+
+
+<h3>About</h3>
+
+<script defer src="scripts/script.js"></script>
+
+<img src="images/Horse_rider.png" alt="A brown-haired girl wearing a red shirt and blue jeans riding a brown horse.">
+
+<p>
+Stardew Valley is an open-ended country-life RPG! 
+You’ve inherited your grandfather’s old farm plot in Stardew Valley. 
+Armed with hand-me-down tools and a few coins, you set out to begin your new life. 
+Can you learn to live off the land and turn these overgrown fields into a thriving home? It won’t be easy. 
+Ever since Joja Corporation came to town, the old ways of life have all but disappeared. The community center, 
+once the town’s most vibrant hub of activity, now lies in shambles. But the valley seems full of opportunity.
+With a little dedication, you might just be the one to restore Stardew Valley to greatness! 
+</p>
+
+
+<div class="basics">
+
+<ul>
+   <li><h3>Basics</h3></li>
+   <li> <img src="images/Animals_Icon.png" alt="Pixelart of a light-brown chicken."> <a href="https://youtu.be/0gi5-mEVEc4?si=ds9h1YMzqnyn8JQS">Getting started</a></li>
+   <li> <img src="images/The_Player_Icon.png" alt="A pixelart face with brown eyes and brown hair.">The player </li>
+   <li> <img src="images/Controls_Icon.png" alt="A pixelart of a gamecontroler">Controls</li>
+   <li> <img src="images/32px-Energy.png" alt="A green plus">Energy</li>
+   <li> <img src="images/32px-Health.png" alt="A red capital letter H">Health</li>
+   <li> <img src="images/32px-Scout.png" alt="Pixelart of a looking glass">Skills</li>
+   <li> <img src="images/30px-Time_Icon.png" alt="A yellow pixelart clock">Day cycle</li>
+   <li> <img src="images/32px-Inventory_Icon.png" alt="Pixelart of a red bag">Inventory</li>
+   <li> <img src="images/32px-Standard_Farm_Map_Icon.png" alt="Pixelart of a red house on a farm.">Farm Maps</li>
+</ul>
+
+
+
+<ul>
+	<li><h3>Gameplay</h3></li>
+	<li> <img src="images/Abigail_Icon.png" alt="">Villagers</li>
+	<li> <img src="images/Speech_bubble.png" alt="">Friendship</li>
+	<li> <img src="images/Marriage_Icon.png" alt="">Marriage</li>
+	<li> <img src="images/Toddler_Icon.png" alt="">Children</li>
+	<li> <img src="images/Quests_Icon.png" alt="">Quests</li>
+	<li> <img src="images/32px-Bundle_Icon.png" alt="">Bundles</li>
+	<li> <img src="images/32px-Achievements_Icon.png" alt="">Achievements</li>
+	<li> <img src="images/32px-Multiplayer_Icon.png" alt="">Multiplayer</li>
+	<li> <img src="images/32px-SMAPI_mascot.png" alt="">Modding</li>
+</ul>
+</div>
+
+<div class="derest">
+
+<ul>
+	<li><h3>The farm</h3></li>
+    <li> <img src="images/32px-Corn.png" alt="">Crops</li>
+	<li> <img src="images/32px-ShippingBox.png" alt="">Shipping </li>
+	<li> <img src="images/32px-White_Chicken.png" alt="">Animals </li>
+	<li> <img src="images/32px-Apple_Sapling.png" alt="">Fruit Trees </li>
+	<li> <img src="images/Artisan_Icon.png" alt="">Artisan Goods </li>
+	<li> <img src="images/house.png" alt="">Farmhouse </li>
+	<li> <img src="images/32px-Red_Mushroom.png" alt="">The Cave </li>
+	<li> <img src="images/32px-Quality_Sprinkler.png" alt="">Greenhouse </li>
+	<li> <img src="images/32px-Plank_Cabin_Stage_1.png" alt="">Cabin </li>
+</ul>
+
+
+
+<ul>
+   <li><h3>Environment</h3></li>
+   <li> <img src="images/32px-Weather_Icon.png" alt="">Weather</li>
+   <li> <img src="images/32px-All_Seasons_Icon.png" alt="">Seasons</li>
+   <li> <img src="images/32px-Dandelion.png" alt="">Spring</li>
+   <li> <img src="images/32px-Sweet_Pea.png" alt="">Summer</li>
+   <li> <img src="images/32px-Hazelnut.png" alt="">Fall</li>
+   <li> <img src="images/32px-Snow_Yam.png" alt="">Winter</li>
+   <li> <img src="images/Festivals_Icon.png" alt="">Festivals</li>
+   <li> <img src="images/32px-Bug.png" alt="">Monsters</li>
+   <li> <img src="images/32px-Floor_TV.png" alt="">Television</li>
+</ul>
+</div>
+
+<h3>Items</h3>
+
+<ul>
+<li> <img src="images/32px-Hoe.png" alt=""> Tools </li>
+<li> <img src="images/32px-Rusty_Sword.png" alt=""> Weapons </li>
+<li> <img src="images/32px-Red_Cowboy_Hat.png" alt=""> Hats </li>
+<li> <img src="images/32px-Tundra_Boots.png" alt=""> Footwear </li>
+<li> <img src="images/32px-Sturdy_Ring.png" alt=""> Rings </li>
+</ul>
+
+
+<ul>
+<li> <img src="images/32px-Wild_Horseradish.png" alt=""> Foraging </li>
+<li> <img src="images/32px-Bream.png" alt=""> Fish </li>
+<li> <img src="images/32px-Wild_Bait.png" alt=""> Bait </li>
+<li> <img src="images/32px-Dressed_Spinner.png" alt=""> Tackle </li>
+<li> <img src="images/32px-Basic_Fertilizer.png" alt=""> Fertilizer </li>
+</ul>
+
+<ul>
+<li> <img src="images/Cooking_Icon.png" alt=""> Cooking </li>
+<li> <img src="images/32px-Field_Snack.png" alt=""> Crafting </li>
+<li> <img src="images/32px-Acorn.png" alt=""> Trees </li>
+<li> <img src="images/32px-Secret_Note_Icon.png" alt=""> Secret Notes </li>
+<li> <img src="images/32px-Club_Card.png" alt=""> Wallet </li>
+</ul>
+
+<ul>
+<li> <img src="images/32px-Arrowhead.png" alt=""> Artifacts </li>
+<li> <img src="images/32px-Ruby_Node.png" alt=""> Minerals </li>
+<li> <img src="images/Furniture_Icon.png" alt=""> Furniture </li>
+<li> <img src="images/Wallpaper_Icon.png" alt=""> Wallpaper </li>
+<li> <img src="images/32px-Flooring_36_Icon.png" alt=""> Flooring </li>
+</ul>
+
+
+
+
+<h3>The Valley</h3>
+
+<section>
+<ul>
+<li> <img src="" alt=""> <a href="https://youtu.be/0gi5-mEVEc4?si=ds9h1YMzqnyn8JQS">Pelican Town</a> </li>
+<li> <img src="" alt="">Blacksmith</li>
+<li> <img src="" alt="">Community Center</li>
+<li> <img src="" alt="">Harvey's Clinic</li>
+<li> <img src="" alt="">JojaMart</li>
+<li> <img src="" alt="">Museum</li>
+<li> <img src="" alt="">Pierre's</li>
+<li> <img src="" alt="">The Saloon</li>
+<li> <img src="" alt="">The Sewers</li>
+</ul>
+</section>
+
+<section>
+	<ul>
+		<li> <img src="" alt="">Cindersap Forest</li>
+		<li> <img src="" alt="">Marnie's Ranch</li>
+		<li> <img src="" alt="">Ruined House</li>
+		<li> <img src="" alt="">Secret Woods</li>
+		<li> <img src="" alt="">Traveling Cart</li>
+		<li> <img src="" alt="">Wizard's Tower</li>
+	</ul>
+</section>
+
+<section>
+	<ul>
+		<li> <img src="" alt="">The Beach</li>
+		<li> <img src="" alt="">Fish Shop</li>
+		
+	</ul>
+</section>
+
+<section>
+	<ul>
+		<li> <img src="" alt="">The Mountain</li>
+		<li> <img src="" alt="">Adventurer's Guild</li>
+		<li> <img src="" alt="">Carpenter's Shop</li>
+		<li> <img src="" alt="">The Mines</li>
+		<li> <img src="" alt="">Railroad</li>
+		<li> <img src="" alt="">Spa</li>
+		<li> <img src="" alt="">Quarry</li>
+		<li> <img src="" alt="">Quarry Mine</li>
+	</ul>
+</section>
+
+<section>
+	<ul>
+		<li> <img src="" alt="">Mutant Bug Lair</li>
+		<li> <img src="" alt="">Witch's Hut</li>
+		
+	</ul>
+</section>
+
+
+
+
+<h3>Beyond the Valley</h3>
+
+
+<ul>
+	<li> <img src="" alt="">The Desert</li>
+	<li> <img src="" alt="">Casino</li>
+	<li> <img src="" alt="">Desert Trader</li>
+	<li> <img src="" alt="">Oasis</li>
+	<li> <img src="" alt="">Skull Cavern</li>
+</ul>
+
+
+
+<ul>
+	<li> <img src="" alt="">Ginger Island</li>
+	<li> <img src="" alt="">Field Office</li>
+	<li> <img src="" alt="">Island Trader</li>
+	<li> <img src="" alt="">Walnut Room</li>
+	<li> <img src="" alt="">Volcano Dungeon</li>
+</ul>
+
+
+<h3>Official Soundtrack</h3>
+<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232021152&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/concernedape" title="Stardew Valley" target="_blank" style="color: #cccccc; text-decoration: none;">Stardew Valley</a> · <a href="https://soundcloud.com/concernedape/spring-the-valley-comes-alive" title="Spring (The Valley Comes Alive)" target="_blank" style="color: #cccccc; text-decoration: none;">Spring (The Valley Comes Alive)</a></div>
+<!--Naar het nummer op soundcloud en dan via embed-->
+<footer>
+
+</footer>
+
+</main>
+
+
+
 </html>
